fixed youtube, z-index social media

--- a/style.sass
+++ b/style.sass
@@ -88,6 +88,7 @@ body
             display: flex
             justify-content: space-between
             flex-wrap: wrap
+            z-index: 50
             @include mobile
                 width: 90%
                 font-size: 2.5em
